# example_snake_cpp

./: .gitignore  CMakeLists.txt  Jenkinsfile.groovy  LICENSE  OSSlicenses.txt  README.md  SnakeGame.cpp  SnakeGame.h
edk/examples/huestream_example_console/: App.h  BrightnessSawEffect.cpp  CMakeLists.txt  ExplosionMenu.h  LightningEffect.h  Menu.h  RGBSineEffect.cpp  RGBSineEffect.h  RGBSpeedControlMenu.cpp  RGBSpeedControlMenu.h  SawAndLightningMenu.cpp  SawAndLightningMenu.h  SequenceMenu.h  Terminal.cpp
edk/libhuestream/support/: CMakeLists.txt
edk/libhuestream/test/: CMakeLists.txt
edk/wrappers/: CMakeLists.txt  huestream.i
edk/wrappers/csharp/: TypeMap.i  std_shared_ptr_upcast.i
edk/wrappers/java/: CMakeLists.txt  std_shared_ptr_patched.i
examples/huestream_example_gui_win/: BrightnessSawEffect.cpp  BrightnessSawEffect.h  BrightnessSquareWaveEffect.cpp  BrightnessSquareWaveEffect.h  CMakeLists.txt  ColorloopEffect.cpp  ColorloopEffect.h  EffectPlayer.cpp  EffectPlayer.h  FireballsEffect.cpp  FireballsEffect.h  LightpointMarqueeEffect.cpp  LightpointMarqueeEffect.h  RGBSineEffect.cpp  RGBSineEffect.h  StreamTest.aps  StreamTest.cpp  StreamTest.h  StreamTest.rc  StreamTestDlg.cpp  StreamTestDlg.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
libhuestream/: CMakeLists.txt
libhuestream/bridgediscovery/: CMakeLists.txt  README.md
libhuestream/bridgediscovery/bridgediscovery/: BridgeDiscovery.cpp  BridgeDiscovery.h  BridgeDiscoveryClassType.h  BridgeDiscoveryConfiguration.cpp  BridgeDiscoveryConfiguration.h  BridgeDiscoveryConst.h  BridgeDiscoveryResult.cpp  BridgeDiscoveryResult.h  BridgeDiscoveryReturnCode.h  BridgeInfo.cpp  BridgeInfo.h  IBridgeDiscoveryCallback.h
libhuestream/bridgediscovery/src/: BridgeDiscovery.cpp  BridgeDiscoveryConfiguration.cpp  BridgeDiscoveryResult.cpp  BridgeInfo.cpp
libhuestream/huestream/: CMakeLists.txt  HueStream.cpp  HueStream.h  HueStreamFactories.cpp  HueStreamFactories.h
libhuestream/huestream/config/: AppSettings.cpp  AppSettings.h  Config.cpp  Config.h  ObjectBuilder.cpp  ObjectBuilder.h
libhuestream/huestream/connect/: Authenticator.cpp  Authenticator.h  BasicGroupLightController.cpp  BasicGroupLightController.h  BridgeFileStorageAccessor.cpp  BridgeFileStorageAccessor.h  BridgeSearcher.cpp  BridgeSearcher.h  BridgeStreamingChecker.cpp  BridgeStreamingChecker.h  Connect.cpp  Connect.h  ConnectionFlow.cpp  ConnectionFlow.h  ConnectionFlowFactory.cpp  ConnectionFlowFactory.h  ConnectionMonitor.cpp  ConnectionMonitor.h  FeedbackMessage.cpp  FeedbackMessage.h  FullConfigRetriever.cpp  FullConfigRetriever.h  IBasicGroupLightController.h  IBridgeAuthenticator.h  IBridgeSearcher.h  IBridgeStorageAccessor.h  IBridgeStreamingChecker.h  IConnectionFlow.h  IConnectionFlowFactory.h  IConnectionMonitor.h  IFeedbackMessageHandler.h  IFullConfigRetriever.h  IMessageDispatcher.h  MessageDispatcher.cpp  MessageDispatcher.h  OperationResult.h
libhuestream/huestream/effect/: IMixer.h  Mixer.cpp  Mixer.h
libhuestream/huestream/stream/: DtlsConnector.cpp  DtlsConnector.h  DtlsEntropyProvider.cpp  DtlsEntropyProvider.h  DtlsTimerProvider.cpp  DtlsTimerProvider.h  DtlsUdpClient.cpp  DtlsUdpClient.h  IConnector.h  IStream.h  IStreamFactory.h  IStreamStarter.h  ProtocolSerializer.cpp  ProtocolSerializer.h  Stream.cpp  Stream.h  StreamFactory.cpp  StreamFactory.h  StreamSettings.cpp  StreamSettings.h  StreamStarter.cpp  StreamStarter.h  UdpConnector.cpp  UdpConnector.h
libhuestream/support/: AttributeSpecifiers.h  CMakeLists.txt
libhuestream/support/chrono/: Timer.cpp  Timer.h
libhuestream/support/date/: Date.cpp  Date.h  DateFormatter.cpp  DateFormatter.h  Timezone.cpp  Timezone.h
libhuestream/support/jni/: JNIConstants.h  JNIToNative.cpp  JNIToNative.h  SDKSupportJNI.cpp  SDKSupportJNI.h
libhuestream/support/logging/: Log.cpp  Log.h  Logger.cpp  Logger.h  LoggerConsole.cpp  LoggerConsole.h  LoggerFile.cpp  LoggerFile.h
libhuestream/support/network/: DefaultCertificates.txt  Network.cpp  Network.h  NetworkConfiguration.cpp  NetworkConfiguration.h  NetworkInterface.cpp  NetworkInterface.h
libhuestream/support/std/: CppIncludes.h
libhuestream/support/threading/: BlockingQueue.h  ConcurrentExecutor.h  DetachingOperationalQueue.cpp  DetachingOperationalQueue.h  Job.h  Monitor.h  OperationalQueue.cpp  OperationalQueue.h  QueueDispatcher.cpp  QueueDispatcher.h  QueueExecutor.cpp  QueueExecutor.h  ReadWriteLock.cpp  ReadWriteLock.h  SingleThreadExecutor.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h
libhuestream/support/util/: Factory.h  IntegerUtil.cpp  IntegerUtil.h  Provider.h  StringUtil.cpp  StringUtil.h  TimeUtil.cpp  TimeUtil.h
libhuestream/test/: CMakeLists.txt
libhuestream/test/huestream/: HueStreamTestFactories.cpp  HueStreamTestFactories.h  TestHueStream.cpp
src/: CMakeLists.txt  Engine.cpp  Engine.h  EngineAction.h  GameLogic.cpp  GameLogic.h  Settings.h  Snake.cpp  Snake.h  main.cpp
src/data/: Point.cpp  Point.h
src/input/: IInputManager.h  InputManagerTerminal.cpp  InputManagerTerminal.h
src/menu/: Action.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h
src/platform/: FrameSpeedManager.cpp  FrameSpeedManager.h  ITerminal.h  Random.cpp  Random.h  TimeManager.cpp  TimeManager.h  Timer.cpp  Timer.h
src/platform/posx/: TerminalPosx.cpp  TerminalPosx.h
src/render/: IGameRenderer.h  IMenuRenderer.h  Renderer.cpp  Renderer.h
src/render/terminal/: GameRenderderTerminal.cpp  GameRenderderTerminal.h  MenuRenderderTerminal.cpp  MenuRenderderTerminal.h  RendererTerminal.cpp  RendererTerminal.h
tools/huestream_performance_test/: CMakeLists.txt  hardwaretimer.h  main.cpp  pom.xml  testserver.cpp  testwrapper.h  version-template.h  version.h
tools/huestream_performance_test/dependencies/: edk-dependencies-descriptor.xml  pom.xml
wrappers/csharp/: .gitignore  CMakeLists.txt
wrappers/csharp/huestream_csharp_effect_editor/: App.xaml.cs  DynamicFieldBuilder.cs  HueEffectEditor.csproj  ListReflection.cs  MainWindow.xaml  PropertyGridManager.cs  TestPropertyGridManager.cs  packages.config
(+814 files in other folders)
